# dictionaries

./: .gitignore  Cargo.toml  justfile  tasks.toml
.github/workflows/: build.yml  check.yml
.zed/: tasks.json
src/: args.rs  commands.rs  main.rs  progress.rs  test_frequency.rs  traits.rs  utils.rs
src/frequency/: frequency_map.rs  mod.rs  ost.rs  traits.rs  utils.rs
src/frequency/chinese/: hsk.rs  mod.rs
src/frequency/default/: mod.rs
src/processors/: mod.rs  traits.rs
src/processors/cedict/: converter.rs  downloader.rs  extractor.rs  mod.rs  schema.rs
src/processors/wiktionary/: consts.rs  converter.rs  downloader.rs  extractor.rs  mod.rs  schema.rs
src/wiktionary/: converter.rs  downloader.rs  extractor.rs  mod.rs  schema.rs
