[package]
name = "converters-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
indicatif = "0.17.11"
map-macro = "0.3.0"
odict = "2.5.0"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
tempdir = "0.3.7"
tokio = { version = "1.44.2", features = ["full"] }
