[package]
name = "converters-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }
console = "0.16.0"
flate2 = "1.0.28"
indicatif = "0.18.0"
isolang = "2.4.0"
map-macro = "0.3.0"
odict = "2.9.0"
rayon = "1.10.0"
regex = "1.10.3"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.141"
sha2 = "0.10.8"
tempdir = "0.3.7"
tokio = { version = "1.44.2", features = ["full"] }
